# consumecasadi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
